# fastapi_mailing_service

./: .gitignore  README.md  docker-compose-local.yaml  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  test.py
controllers/: clients.py  users.py
mailing_service/: main.py
mailing_service/controllers/: clients.py  execute_mailing.py  mailings.py
mailing_service/migrations/: env.py
mailing_service/migrations/versions/: cd8ca2943116_init.py  d6ec248cc095_init.py
mailing_service/models/: database.py  schemas.py
mailing_service/routers/: clients.py  execute_mailing.py  mailings.py
mailing_service/tasks/: tasks.py
migrations/: env.py
migrations/versions/: 64f69792cd9d_create_database.py  a958230cdabd_made_message_operator_code_is_optional.py
models/: core.py  schemas.py
routers/: clients.py
tasks/: tasks.py
